fix: anime rating overflow

--- a/src/views/Anime.scss
+++ b/src/views/Anime.scss
@@ -173,6 +173,7 @@
 
       & > div {
         font-size: 1rem;
+        white-space: nowrap;
       }
     }
   }
